--- a/lncapital-torq/umbrel-app.yml
+++ b/lncapital-torq/umbrel-app.yml
@@ -4,6 +4,7 @@ category: Lightning Node Management
 name: Torq
 version: "0.9.1"
 tagline: Torq is a capital management tool for routing nodes on the lightning network
+icon: https://svgur.com/s/np8
 description: >-
   Features:
   - Channel and Channel group inspection
@@ -22,9 +23,12 @@ repo: https://github.com/lncapital/torq
 support: https://github.com/lncapital/torq/issues/new
 port: 7028
 gallery:
-  - 1.jpg
-  - 2.jpg
-  - 3.jpg
+  - https://github.com/lncapital/torq/raw/main/forwards-table.png
+  - https://github.com/lncapital/torq/raw/main/forwards-summary.png
+  - https://github.com/lncapital/torq/raw/main/Torq-Events.png
+  - https://github.com/lncapital/torq/raw/main/Torq-Flow.png
+  - https://github.com/lncapital/torq/raw/main/balance-graph.png
+  - https://github.com/lncapital/torq/raw/main/payments.png
 releaseNotes: >-
   Support for arm architecture to run on Raspberry Pi
 path: ""
