--- a/lncapital-torq/umbrel-app.yml
+++ b/lncapital-torq/umbrel-app.yml
@@ -4,7 +4,7 @@ category: Lightning Node Management
 name: Torq
 version: "0.9.1"
 tagline: Torq is a capital management tool for routing nodes on the lightning network
-icon: https://svgshare.com/i/np8.svg
+icon: https://raw.githubusercontent.com/lncapital/torq/main/web/public/safari-pinned-tab.svg
 description: >-
   Features:
   - Channel and Channel group inspection
