--- a/lncapital-torq/umbrel-app.yml
+++ b/lncapital-torq/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: lncapital-torq
 category: Lightning Node Management
-name: Torq
+name: Torq 0.10.0
 version: "0.10.0"
 tagline: Torq is a capital management tool for routing nodes on the lightning network
 icon: https://raw.githubusercontent.com/lncapital/torq/main/docs/images/umbrel/torq-symbol-umbrel.svg
