--- a/lncapital-torq-v0.9.3/umbrel-app.yml
+++ b/lncapital-torq-v0.9.3/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1
-id: lncapital-torqv093
+id: lncapital-torqlegacy
 category: Lightning Node Management
 name: Torq 0.9.3
 version: "0.9.3"
